--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/davidglezz/MIW-DCMVW-WSPAINT#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "fabric": "^2.2.3",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.13",
     "ws": "^5.1.0"
