Server side canvas deps

--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "express": "^4.16.3",
     "fabric": "^2.2.3",
+    "jsdom": "^11.10.0",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.17",
-    "ws": "^5.1.1"
+    "ws": "^5.1.1",
+    "xmldom": "^0.1.27"
   }
 }
